update for unit test

--- a/src/app/Component/menu/menu.component.scss
+++ b/src/app/Component/menu/menu.component.scss
@@ -30,6 +30,12 @@
     width: 2rem;
 }
 
+.menuVersion {
+    color: white;
+    line-height: 4.5rem;
+    font-size: 30px;
+}
+
 .menuArea {
     position: absolute;
     text-align: center;
