--- a/src/app/Component/menu/menu.component.html
+++ b/src/app/Component/menu/menu.component.html
@@ -1,5 +1,6 @@
 <div class="menu">
     <div class="menuHeader">
+        <span class="menuVersion">v{{appVersion}}</span>
         <img class="menuImg" src="./assets/leftArrow.svg" (click)="toggleMenu()"
             [ngStyle]="{'transform': !isMenuOpen?'rotate(180deg)':'rotate(0deg)'}">
     </div>
